# UFO

./: .gitignore  README.md  README_zh-CN.md  download_hf_model.py  index.html  index_bfm0.html  pyproject.toml  requirements.txt  run_g1_teleop_policy_onboard.sh  run_mjlab.sh  run_train.sh  show_help.py
config/policy/: g1_policy.yaml
config/robot/: g1.yaml  (+1 more)
deploy/: README.md
docs/: CLEANUP_NOTES.md  DEPLOYMENT_PLAN.md  MJLAB_SETUP_TRAIN_INFERENCE.md  TRAIN_INFERENCE.md  import_wizard.md  robot_config_training.md
humanoidverse/: distributed.py  eval_joint_mae_dataset.py  export_backward_encoder.py  goal_inference.py  goal_inference_mjlab.py  mjlab_inference_utils.py  mjlab_reward_relabel.py  reward_inference.py  reward_inference_mjlab.py  tracking_inference.py  tracking_inference_mjlab.py  train.py  train_mjlab.py
motivo_isaac.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rl_policy/: bfm_zero.py  ufo_policy.py
scripts/: TELEOP_SIM2SIM_TERMINALS.md  download_data.sh  smoke_release.sh
sim_env/: base_sim.py
tests/: test_agent_aliases.py  test_bfm_zero_safety.py  test_import_tools.py  test_motion_data_adapter.py  test_realtime_z_server_safety.py  test_reference_observations.py  test_robot_config_goal_reward_inference.py  test_robot_config_onnx_export.py  test_robot_config_training.py  test_robot_xml_hydra_generation.py  test_ufo_policy_safety.py  test_update_z_cli.py
tools/: check_realtime_z_obs_alignment.py  export_backward_encoder_onnx.py  sync_website_media.sh
utils/: common.py  math.py  strings.py
website/: README.md  app.js  index.html  styles.css
(+72 files in other folders)
