[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo-deploy"
version = "0.1.0"
description = "Deployment and teleoperation tools for UFO humanoid policies"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy>=1.26.0",
    "onnxruntime>=1.18.0",
    "pyyaml>=6.0.0",
    "pyzmq>=26.0.0",
]

[dependency-groups]
dev = [
    "ruff==0.9.6",
]

[tool.ruff]
line-length = 140
